<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:gravity="center">
        <TextView
                android:text="@string/titutlo"
                android:layout_width="wrap_content"
                android:layout_height="106dp"
                android:id="@+id/textView" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:textSize="100sp" android:fontFamily="@font/roboto" android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark" android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/textInputLayout2"
                app:layout_constraintVertical_bias="0.0"/>
        <TextView
                android:text="@string/subTitulo"
                android:layout_width="wrap_content"
                android:layout_height="68dp"
                android:id="@+id/textView2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
                android:textColor="@color/primaryText"
                android:fontFamily="@font/roboto" android:textStyle="bold" android:textSize="24sp"
                app:layout_constraintHorizontal_bias="0.65"
                app:layout_constraintTop_toBottomOf="@+id/textView"
                app:layout_constraintBottom_toTopOf="@+id/textInputLayout2" app:layout_constraintVertical_bias="0.0"
                android:layout_marginBottom="16dp"/>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                android:id="@+id/textInputLayout2" app:layout_constraintVertical_bias="0.3"
                android:background="@drawable/redondear">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/usuario" android:fontFamily="@font/roboto"
                    android:textColor="@color/primaryText" android:textColorHint="@color/colorAccent"
                    android:textColorLink="@color/colorAccent" android:id="@+id/inputUser" android:maxLines="1"
                    android:inputType="textPersonName" android:imeOptions="actionNext"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                app:layout_constraintVertical_bias="0.0" android:id="@+id/textInputLayout6"
                android:background="@drawable/redondear">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password" android:fontFamily="@font/roboto"
                    android:textColor="@color/primaryText" android:textColorHint="@color/secondaryText"
                    android:textColorLink="@color/colorAccent" android:id="@+id/inputPassword"
                    android:inputType="textPassword" android:maxLines="1" android:imeOptions="actionDone"/>
        </android.support.design.widget.TextInputLayout>
        <Button
                android:text="@string/iniciarSesion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout6"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp" app:layout_constraintVertical_bias="0.0"
                android:background="@color/colorPrimary" android:textColor="@color/textIcons"
                android:fontFamily="@font/roboto" android:onClick="verificaInput"/>
        <ImageView
                android:layout_width="278dp"
                android:layout_height="10dp" app:srcCompat="@drawable/separador"
                android:id="@+id/imageView3" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="30dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="30dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/button" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.029"
                android:contentDescription="@string/descripcionSeparador"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:gravity="center">
            <TextView
                    android:text="@string/crearCuent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView3" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/secondaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.4" android:layout_marginRight="3dp"
                    android:layout_marginEnd="3dp"/>
            <TextView
                    android:text="@string/registrate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView4"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textColor="@color/primaryText" android:fontFamily="@font/roboto"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/textView3"
                    app:layout_constraintHorizontal_bias="0.02" android:onClick="registrarCuenta"
                    android:layout_marginRight="8dp" android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/imageView3" app:layout_constraintVertical_bias="0.0"
            />
        </LinearLayout>
        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent" app:srcCompat="@drawable/muscle"
                android:id="@+id/imageView5"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" android:layout_gravity="center"/>
    </LinearLayout>
</android.widget.RelativeLayout>