<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".buscarEvaluacion">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="16dp"
                android:background="@drawable/redondear"

            >

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/desde"
                    android:gravity="center"
                    android:id="@+id/desde"
                    android:focusable="false"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_margin="16dp"
                android:background="@drawable/redondear">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hasta"
                    android:gravity="center"
                    android:id="@+id/hasta"
                    android:focusable="false"/>
        </android.support.design.widget.TextInputLayout>
        <Button
                android:text="@string/buscar"
                android:layout_width="match_parent"

                android:layout_height="wrap_content" android:id="@+id/button3"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@color/colorPrimary" android:textColor="@color/textIcons"
                android:fontFamily="@font/roboto"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" app:layout_constraintVertical_bias="0.0"
        />
        <ListView
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:id="@+id/ListViewEliminar2"/>
    </LinearLayout>
</FrameLayout>