<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             tools:context=".register2" android:id="@+id/fragment2">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/progressBar" android:padding="16dp"/>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                android:id="@+id/textInputLayout2" app:layout_constraintVertical_bias="0.3"
                android:background="@drawable/redondear">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/nombre" android:fontFamily="@font/roboto"
                    android:textColor="@color/primaryText" android:textColorHint="@color/colorAccent"
                    android:textColorLink="@color/colorAccent" android:id="@+id/inputNombre" android:maxLines="1"
                    android:digits="@string/onlyText" android:imeOptions="actionNext" android:singleLine="true"
                    android:inputType="textFilter" android:nextFocusDown="@id/inputApellido"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                android:id="@+id/textInputLayout1" app:layout_constraintVertical_bias="0.3"
                android:background="@drawable/redondear">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellidop" android:fontFamily="@font/roboto"
                    android:textColor="@color/primaryText" android:textColorHint="@color/colorAccent"
                    android:textColorLink="@color/colorAccent" android:id="@+id/inputApellido" android:maxLines="1"
                    android:digits="@string/onlyText" android:imeOptions="actionNext"
                    android:nextFocusDown="@id/inputApellidoM" android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="16dp"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="16dp" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                android:id="@+id/textInputLayout3" app:layout_constraintVertical_bias="0.3"
                android:background="@drawable/redondear">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/apellidom" android:fontFamily="@font/roboto"
                    android:textColor="@color/primaryText" android:textColorHint="@color/colorAccent"
                    android:textColorLink="@color/colorAccent" android:id="@+id/inputApellidoM"
                    android:maxLines="1" android:digits="@string/onlyText" android:imeOptions="actionDone"
                    android:nextFocusDown="@id/button2" android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
        <Button
                android:text="@string/siguiente"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/button2"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginRight="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="16dp"
                android:layout_marginStart="16dp"
                android:background="@color/colorPrimary" android:textColor="@color/textIcons"
                android:fontFamily="@font/roboto"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2" app:layout_constraintVertical_bias="0.0"
        />
        <ImageView
                android:layout_width="278dp"
                android:layout_height="10dp" app:srcCompat="@drawable/separador"
                android:id="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="30dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="30dp"
                android:layout_marginStart="8dp"
                app:layout_constraintTop_toBottomOf="@+id/button3" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.01999998"
                android:contentDescription="@string/descripcionSeparador"
                android:layout_gravity="center_horizontal" android:layout_marginTop="16dp"/>
    </LinearLayout>
</FrameLayout>