<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        
        android:layout_height="match_parent"
        tools:context=".registro">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"

            android:layout_height="match_parent">
        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp" app:srcCompat="@mipmap/addperson" android:id="@+id/imageView2"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="44dp"
                app:layout_constraintTop_toTopOf="parent" android:adjustViewBounds="false"
                android:contentDescription="@string/personAdd"
                android:layout_gravity="center_horizontal" android:layout_marginBottom="40dp"/>
        <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/idFragmentModifica"/>
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"

                android:layout_height="match_parent" android:gravity="center_horizontal">
            <TextView
                    android:text="@string/iniciarCuenta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView6"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
                    android:fontFamily="@font/roboto"
                    android:textColor="@color/secondaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.4"/>
            <TextView
                    android:text="@string/iniciar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView5"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:textColor="@color/primaryText" android:fontFamily="@font/roboto"
                    android:textStyle="bold"
                    app:layout_constraintStart_toEndOf="@+id/textView5"
                    app:layout_constraintHorizontal_bias="0.02"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:onClick="iniciarSesion" android:layout_marginLeft="1dp"
                    android:layout_marginStart="1dp"/>
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>