<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".agEvaluacion">

    <TextView
            android:text="@string/titutlo"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:id="@+id/textView7"
            android:textSize="50sp" android:fontFamily="@font/roboto" android:textStyle="bold"
            android:textColor="@color/colorPrimaryDark"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:text="@string/subTitulo"
            android:layout_width="wrap_content"
            android:layout_height="68dp"
            android:id="@+id/textView9"
            android:textColor="@color/primaryText"
            android:fontFamily="@font/roboto" android:textStyle="bold" android:textSize="12sp"
            app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.56"/>
    <ImageView
            android:layout_width="278dp"
            android:layout_height="10dp" app:srcCompat="@drawable/separador"
            android:id="@+id/imageView4" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="30dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="30dp"
            android:layout_marginStart="8dp"
            android:contentDescription="@string/descripcionSeparador"
            android:layout_gravity="center_horizontal" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/textView9" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/IDFragmentAdd"/>
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="486dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:id="@+id/IDFragmentAdd"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/idFragmentNvegacion"/>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/idFragmentNvegacion"
            tools:ignore="MissingConstraints"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
    />
</android.support.constraint.ConstraintLayout>